--- a/common/uni.css
+++ b/common/uni.css
@@ -852,26 +852,29 @@ radio-group label, checkbox-group label{
 .uni-swiper-tab {
 	width: 100%;
 	white-space: nowrap;
-	line-height: 75upx;
-	height: 75upx;
-	border-bottom: 1px solid #f4f4f4;
+	line-height: 100upx;
+	height: 100upx;
+	/* old */
+	/* border-bottom: 1px solid #c8c7cc; */
 }
 
 .swiper-tab-list {
 	font-size: 30upx;
-	width: 120upx;
+	width: 150upx;
 	display: inline-block;
 	text-align: center;
 	color: #555;
-	padding: 10upx 0;
-	border-bottom-width: 5upx;
-	border-bottom-style: solid;
-	border-color: #FFFFFF;
+	/* new，新增border-bottom以后，height变高了 */
+	border-bottom: 5upx solid #fff;
 }
 
 .uni-tab-bar .active {
-	color: #DE5F0E;
-	border-color: #DE5F0E;
+	/* old */
+	/* color: #007AFF; */
+	/* new */
+	color: #fd6801;
+	/* new */
+	border-bottom: 5upx solid #fd6801;
 }
 
 .uni-tab-bar .swiper-box {
